Added tag styling to CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ body {
   content: ", ";
   font-style: normal;
 }
+.tag:before {
+  content: ", ";
+  font-style: normal;
+}
 
 #loadQuote {
   position: fixed;
